--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
     "react-router-dom": "^4.3.1",
-    "serialize-javascript": "^1.4.0",
-    "source-map-support": "^0.4.15"
+    "serialize-javascript": "^1.5.0",
+    "source-map-support": "^0.4.18"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -34,6 +34,7 @@
     "file-loader": "^0.11.2",
     "nodemon": "^1.11.0",
     "postcss-loader": "^2.0.6",
-    "webpack": "^3.1.0"
+    "webpack": "^3.1.0",
+    "webpack-node-externals": "^1.7.2"
   }
 }
